--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@rollup/plugin-dsv": "^3.0.4",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -32,6 +33,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"csv-parse": "^5.5.6"
+		"@types/random-seed": "^0.3.5",
+		"random-seed": "^0.3.0"
 	}
 }
